Changelog
=========


2.2.3 (unreleased)
------------------

- Fix deleting Plone site. [jone]


2.2.2 (2019-11-26)
------------------

- Fix upgrade steps that wouldn't run in 2.x codebase. [djowett-ftw]


2.2.1 (2019-11-25)
------------------

- Fix ConfigurationConflictError occurring when plone.app.widgets added in Plone 4.
  [djowett-ftw]
- Pin plone.protect to minimum version supplying IDisableCSRFProtection
  [djowett-ftw]


2.2.0 (2019-11-14)
------------------

- Add a FileUpload adaptor for plone.namedfile so that ftw.file uploads can
  work in ftw.simplelayout's FileListingBlock. [djowett-ftw]
- Fix contentType attribute type. It needs to be utf-8 for the zope.schema.BytesLine. [mathias.leimgruber]
- Remove ftw.calendarwidget dependency [Nachtalb]


2.1.0 (2019-11-12)
------------------

- Add support for Plone 5.1. [buchi]


2.0.3 (2019-11-05)
------------------

- DX migration: ignore flowplayer fields (``width`` and ``height``). [jone]


2.0.2 (2019-11-05)
------------------

- Fix ftw.theming integration [mathias.leimgruber]
- Fix incorrect ID in FTI definition. [jone]
- Dexterity migration: import GS profile even when not migrating content. [jone]


2.0.1 (2019-11-04)
------------------

- Add "getContentType" method to ftw.file.File to support legazy code. [mathias.leimgruber]
- Fix ftw.file.File FTI - wrong factory. [mathias.leimgruber]
- Add ftw.theming integration (Icon). [mathias.leimgruber]


2.0.0 (2019-10-30)
------------------

- Move to Dexterity, remove Archetypes functionality (but not models)
  [mathias.leimgruber, djowett-ftw]
- Add AT to DX migration step [mathias.leimgruber, djowett-ftw]
- Remove TinyMCE integration [djowett-ftw]
- Rename model fields while migrating to dexterity [djowett-ftw]
- Stop drag and drop upload adding two versions [jone, djowett-ftw]
- Add uninstall profile [djowett-ftw]


1.16.2 (2019-05-14)
-------------------

- Improve umlaut support for MSIE file download [busykoala]


1.16.1 (2019-04-02)