@@ -1,0 +1,10 @@
+({
+  baseUrl: "./ftw/file/resources",
+  paths: {
+    jquery: "empty:",
+  },
+  name: "main-bundle",
+  out: "./ftw/file/resources/ftw-file-compiled.js",
+  // Uncomment the line below for JS development
+  // optimize: "none",
+})
