@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_javascripts" meta_type="JavaScripts Registry" autogroup="False">
-
-    <javascript cacheable="True" compression="safe" cookable="True" enabled="on"
-                expression="" id="++resource++ftw.file.resources/hideOverrideFilenameField.js"
-                insert-after="++resource++plone.app.jquery.js"
-                inline="False"/>
-
-</object>
