@@ -1,6 +1,17 @@
 <?xml version="1.0"?>
 <registry>
 
+  <records prefix="plone.bundles/ftw-file-resources"
+           interface="Products.CMFPlone.interfaces.IBundleRegistry">
+    <value key="enabled">True</value>
+    <value key="depends">plone</value>
+    <value key="stub_js_modules">jquery</value>
+    <value key="compile">False</value>
+    <value key="jscompilation">++resource++ftw.file.resources/ftw-file-compiled.js</value>
+    <value key="last_compilation">2019-12-16 00:00:00</value>
+    <value key="merge_with">default</value>
+  </records>
+
     <record name="ftw.file.filesettings.user_ids">
         <field type="plone.registry.field.List">
             <title>user_ids</title>
