@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <registry>
 
+    <records prefix="plone.bundles/ftw-file-resources" interface="Products.CMFPlone.interfaces.IBundleRegistry" remove="True"/>
     <record name="ftw.file.filesettings.user_ids" remove="True" />
     <record name="ftw.file.disable_download_redirect" remove="True" />
 
