@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+
+    <javascript id="++resource++ftw.file.resources/hideOverrideFilenameField.js" remove="True" />
+
+</object>
